Allowing other folders...
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk-eclipse/trunk@12284 eb4e18e3-b210-0410-a6ab-dec725e4b171

--- a/build.xml
+++ b/build.xml
@@ -13,9 +13,13 @@
 	
 	<target name="build">
 		<mkdir dir="${build}"/>
-		<javac destdir="${build}" srcdir="${srcmain}">
+		<javac destdir="${build}" srcdir="${srcmain}" debug="yes">
 			<include name="net/sf/cdk/tools/**/*"/>
 	    </javac>
 	</target>
 
+	<target name="clean">
+		<delete dir="${build}"/>
+	</target>
+	
 </project>
