Use a props file for setting the CDK root
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk-eclipse/trunk@12565 eb4e18e3-b210-0410-a6ab-dec725e4b171

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,7 @@
 <project name="cdk-eclipse" default="export">
 
+        <property file="ant.properties"/>
+
 	<property name="build" value="build"/>
 	<property name="exports" value="exports"/>
 	<property name="srcmain" value="src/main"/>
