Deal properly with empty tags
git-svn-id: https://cdk.svn.sourceforge.net/svnroot/cdk/cdk-eclipse/trunk@12567 eb4e18e3-b210-0410-a6ab-dec725e4b171

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 	<property name="exports" value="exports"/>
 	<property name="srcmain" value="src/main"/>
 
-	<property name="tag" value="trunk"/>
+	<property name="tag" value=""/>
 	<property name="root" value="../../cdk"/>
 	
 	<target name="export" depends="build">
