--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 	<property name="srcmain" value="src/main"/>
 
 	<property name="tag" value=""/>
+	<property name="version" value="unknown"/>
 	<property name="root" value="../../cdk"/>
 	
 	<target name="export" depends="build">
@@ -16,6 +17,7 @@
 			</classpath>
 			<arg value="--tag=${tag}"/>
 			<arg value="--root=${root}"/>
+			<arg value="--version=${version}"/>
 		</java>
 	</target>
 	
