--- a/externals/signatures/.project
+++ b/externals/signatures/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>signature</name>
+  <name>signatures</name>
   <comment></comment>
   <projects>
   </projects>
